--- a/.gitignore
+++ b/.gitignore
@@ -123,6 +123,8 @@ gradle/
 .gradle/
 .idea/**/gradle.xml
 .idea/**/libraries
+/gradlew
+/gradlew.bat
 
 # Gradle and Maven with auto-import
 # When using Gradle or Maven with auto-import, you should exclude module files,
