Initial implementation of single tables and querying on result sets

--- a/build.gradle
+++ b/build.gradle
@@ -17,4 +17,6 @@ sourceSets {
 }
 dependencies {
     compile 'junit:junit:4.12'
+
+    implementation group: 'mysql', name: 'mysql-connector-java', version: '5.1.13'
 }
