--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,10 @@ sourceSets {
     }
 }
 dependencies {
-    compile 'junit:junit:4.12'
+    testImplementation('junit:junit:4.13')
+    testCompile "org.powermock:powermock-core:1.7.3"
+    testCompile "org.powermock:powermock-module-junit4:1.7.3"
+    testCompile "org.powermock:powermock-api-mockito2:1.7.3"
 
     implementation group: 'mysql', name: 'mysql-connector-java', version: '5.1.13'
 }
